docks: add documentation for List Openings
